codecparsers: {h264,h265}parser: Fix typo around SEI nalu generator

Fix to create correct SEI nalu when the size of payloadType and/or
payloadType is larger than 255 (0xff)

Fixes: https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/-/issues/1601
Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/1106>